--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ JUDE VINOD, JUDEVINOD, judevinod5" />
 				</div>
 				<div class="col-md-3 w3layouts_gallery_grid">
 					<img src="images/ananzi.png" alt="gallery" style="height: 180px; width: 180px;">
-					<a href="https://ananzi-puzzle.netlify.app/" style="margin-left: -60px;" target="_blank">Ananzi Puzzle</a>
+					<a href="https://www.ananzi.tech/" style="margin-left: -60px;" target="_blank">Ananzi Infotech</a>
 				</div>
 				<div class="col-md-3 w3layouts_gallery_grid">
 					<img src="images/unwind.png" alt="gallery"  style="height: 210px; width: 190px;">
