--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Jude Vinod, CV Jude Vinod, jude vinod, jvk.5, jvk, resume jude vinod, portfolio Jude Vinod,
 JUDE VINOD, JUDEVINOD, judevinod5" />
+<meta property="og:image:type" content="/images/r21.jpg">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
