--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Jude Vinod, CV Jude Vinod, jude vinod, jvk.5, jvk, resume jude vinod, portfolio Jude Vinod,
 JUDE VINOD, JUDEVINOD, judevinod5" />
-<meta property="og:image:type" content="/images/r21.jpg">
+
+<meta name="description" content="My Profile | Jude Vinod" />
+<meta name="title" property="og:title" content="Jude Vinod" />
+<meta property="og:type" content="Website" />
+<meta
+      name="image" 
+      property="og:image" 
+      content="https://live.staticflickr.com/65535/51304086218_67a5bfd4e9_b.jpg" />
+<meta 
+      name="description" 
+      property="og:description"
+      content="My Profile | Jude Vinod" />
+<meta name="author" content="Jude Vinod" />	
+	
+	
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
