--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ JUDE VINOD, JUDEVINOD, judevinod5" />
 				</div>
 				<div class="col-md-3 w3layouts_gallery_grid">
 					<img src="images/spotify.png" alt="gallery" style="height: 180px; width: 180px;">
-					<a href="#" style="margin-left: -61px;" target="_blank">Spotify Clone</a>
+					<a href="https://www.figma.com/community/file/1006925932684732876" style="margin-left: -61px;" target="_blank">Spotify Clone</a>
 				</div>
 				<div class="col-md-3 w3layouts_gallery_grid">
 					<img src="images/ananzi.png" alt="gallery" style="height: 180px; width: 180px;">
